[gd_scene load_steps=11 format=3 uid="uid://diauyr686fq8"]

[ext_resource type="Script" path="res://player/player.gd" id="1_r6ef5"]
[ext_resource type="Script" path="res://player/raycast_interact.gd" id="2_26vme"]
[ext_resource type="PackedScene" uid="uid://cyetd25ga0uh6" path="res://entities/rifle.tscn" id="3_6mx6s"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_lc8nt"]

[sub_resource type="ORMMaterial3D" id="ORMMaterial3D_0dcya"]
albedo_color = Color(0.343142, 0.4686, 0.233243, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_d6gvv"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="Animation" id="Animation_k0aj6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.242007, 1.8668, -2.042)]
}

[sub_resource type="Animation" id="Animation_6geim"]
resource_name = "ball_rotation"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 6.28319)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rnxrg"]
_data = {
"RESET": SubResource("Animation_k0aj6"),
"ball_rotation": SubResource("Animation_6geim")
}

[sub_resource type="GDScript" id="GDScript_8wwca"]

[node name="Player" type="RigidBody3D"]
collision_layer = 3
collision_mask = 3
lock_rotation = true
linear_damp = 3.0
script = ExtResource("1_r6ef5")

[node name="player_mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0720091, 0)
mesh = SubResource("CapsuleMesh_lc8nt")
surface_material_override/0 = SubResource("ORMMaterial3D_0dcya")

[node name="player_collision" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_d6gvv")

[node name="TwistPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0, 0.299794, 0)

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0441315, 0)

[node name="Camera3D" type="Camera3D" parent="TwistPivot/PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.718036, 0)
fov = 76.1938

[node name="RayCast_player" type="RayCast3D" parent="TwistPivot/PitchPivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.26696, 0)
target_position = Vector3(0, 0, -2)
collision_mask = 9
script = ExtResource("2_26vme")

[node name="HoldPosition" type="Node3D" parent="TwistPivot/PitchPivot/Camera3D/RayCast_player"]
transform = Transform3D(0.336668, -0.155851, 0.928636, -0.865057, -0.44073, 0.239652, 0.371928, -0.884007, -0.283199, 0.47459, -0.126044, -1.2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="TwistPivot/PitchPivot/Camera3D/RayCast_player/HoldPosition"]
libraries = {
"": SubResource("AnimationLibrary_rnxrg")
}

[node name="LaunchBall" type="Node3D" parent="TwistPivot/PitchPivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.57553e-08, -0.440292, -1.5353)
script = SubResource("GDScript_8wwca")

[node name="RayCast_launch_ball" type="RayCast3D" parent="TwistPivot/PitchPivot/Camera3D/LaunchBall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.60271e-09, -0.111472, -0.22155)
target_position = Vector3(0, 0, -1)

[node name="Rifle" parent="TwistPivot/PitchPivot/Camera3D" instance=ExtResource("3_6mx6s")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.05869e-09, 0, -0.236851)

[connection signal="ball_thrown" from="TwistPivot/PitchPivot/Camera3D/RayCast_player" to="." method="on_ball_thrown"]
